force-app/main/default/objects/Platform_Action_Worker__mdt/Platform_Action_Worker__mdt.object-meta.xml
<CustomObject>
    <description>Maps platform actions from the centralized handler to given workers described in this list. Each record in this metadata represents an associated platform event with a handler that will get executed on</description>
    <label>Platform Action Worker</label>
    <pluralLabel>Platform Action Workers</pluralLabel>
</CustomObject>