force-app/main/default/objects/Platform_Action_Worker__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to determine if this worker is active or not. Only active workers will be used to send work to</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>