force-app/main/default/objects/Platform_Action_Worker__mdt/fields/Body_Field__c.field-meta.xml
<CustomField>
    <fullName>Body_Field__c</fullName>
    <description>Field on the Platform Event worker that will hold the JSON body message</description>
    <inlineHelpText>Long Text Field of Max size on Platform Event</inlineHelpText>
    <label>Body Field</label>
    <metadataRelationshipControllingField>Platform_Action_Worker__mdt.Platform_Event__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Platform_Action_Workers</relationshipLabel>
    <relationshipName>Platform_Action_Workers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>