force-app/main/default/objects/Platform_Action_Worker__mdt/fields/Body_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Body_Field_Name__c</fullName>
    <description>The API name of the field that will map the body message of the platform event. Must be a long text field</description>
    <inlineHelpText>API name of JSON body field</inlineHelpText>
    <label>Body Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>