force-app/main/default/objects/Platform_Action_Worker__mdt/fields/Platform_Event__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event__c</fullName>
    <description>Platform Event representing the Worker Platform which we be handling work from the main action__e event.</description>
    <inlineHelpText>Must be a Platform Event Object</inlineHelpText>
    <label>Platform Event</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Platform_Action_Workers</relationshipLabel>
    <relationshipName>Platform_Action_Workers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>