force-app/main/default/objects/Platform_Action_Worker__mdt/fields/Platform_Event_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Api_Name__c</fullName>
    <description>The name of the platform event representing a worker for the centralized platform action handler</description>
    <label>Platform Event Api Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>