force-app/main/default/objects/Platform_Action_Worker__mdt/validationRules/Enforce_Platform_Event_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Platform_Event_Type</fullName>
    <active>true</active>
    <description>Ensures the Platform_Event field is an object of type PlatfromEvent (i.e. ending in __e)</description>
    <errorConditionFormula>RIGHT(Platform_Event__r.QualifiedApiName,3) != &apos;__e&apos;</errorConditionFormula>
    <errorDisplayField>Platform_Event__c</errorDisplayField>
    <errorMessage>Object must be of type Platform Event</errorMessage>
</ValidationRule>